2004-10-17  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: lol2pkglist code cleanup.

2004-10-16  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Implemented pkglist2lol and lol2pkglist, to convert
	Depends-like fields between Debian string and a list-of-lists of
	pkgname atoms.
	* PkgVersion.pm: Convert conditional_pkg_list to use the new
	Services functions. Fix check for Depends:darwin to allow pkgnames
	to contain "darwin". Optimize BDO violation check.

2004-10-15  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: conditional_pkg_list: Fix parsing so no extra whitespace.

2004-10-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm: Warn users with the broken gcc, whenever they compile
	something.
	
2004-10-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Add the broken-gcc package, currently detects
	XCode 1.5 build 1666.

2004-10-14  Christian Schaffner  <chris01@users.sourceforge.net>

	* Engine.pm: Introduce new column in the commands matrix indicating if
	  a command needs apt-get or apt-get with the --ignore-breakage option
	  if the UseBinaryDist option is enabled. This requirement is then 
	  checked before the command is executed. 
	  Also use full path to call apt-get and apt-cache.
	* Package.pm: Use full path to call apt-get.
	* PkgVersion.pm, SelfUpdate.pm: Remove obsolete tests for apt-get. 
	  Use the full path to apt-get.

2004-10-12  David Höhn <dmalloc@users.sourceforge.net>

	* Configure.pm: Chnage the prompt for proxy selection slightly.
			Some clean up of phrases. I thinkt his prompt is
			too long, we can easily revert if, should people
			dislike it.

2004-10-12  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: Obey flock when reading db files via Storable

2004-10-12  Christian Schaffner  <chris01@users.sourceforge.net>

	* Engine.pm: Implement 'UseBinaryDist' option that causes fink 
	to download pre-compiled binary packages from the binary distro if