@@ -1482,8 +1482,8 @@ sub real_install {
 		} elsif ($item->[FLAG] == 1) {
 			push @requested, $pkgname;
 		}
-		if ($item->[OP] == $OP_BUILD or $item->[OP] == $OP_REBUILD) {
-			$willbuild = 1;
+		if ($item->[OP] == $OP_REBUILD or not $item->[PKGVER]->is_present()) {
+			$willbuild = 1 unless ($item->[OP] == $OP_INSTALL and $item->[PKGVER]->is_installed());
 		}
 	}
 
@@ -1493,8 +1493,10 @@ sub real_install {
 			
 
 	if ($willbuild) {
-		if (Fink::PkgVersion->match_package("broken-gcc")->is_installed()) { print "\nWARNING: You are using a version of gcc which is known to produce incorrect\noutput from c++ code under certain circumstances.\n\nFor information about upgrading, see the Fink web site.\n\n" ;
-																		 }
+		if (Fink::PkgVersion->match_package("broken-gcc")->is_installed()) { 
+			print "\nWARNING: You are using a version of gcc which is known to produce incorrect\noutput from c++ code under certain circumstances.\n\nFor information about upgrading, see the Fink web site.\n\n" ;
+			sleep 10;
+		}
 	}
 
 	# display list of requested packages
